--- a/src/Pages/Home/style.scss
+++ b/src/Pages/Home/style.scss
@@ -121,9 +121,9 @@
           font-family: "Raleway", sans-serif;
           transition: all 0.3s ease;
 
-          &:hover{
-              color: #185F7D;
-              padding-left: 20px;
+          &:hover {
+            color: #185f7d;
+            padding-left: 20px;
           }
         }
       }
@@ -134,6 +134,86 @@
 
       &.second {
         margin-top: 150px;
+      }
+    }
+  }
+
+  /** @section => our team */
+  .home__container__ourTeam {
+    margin-top: 180px;
+    h1 {
+      text-align: center;
+      margin-bottom: 12px;
+      color: #434140;
+      font-family: "Raleway", sans-serif;
+      font-size: 32px;
+      font-weight: 600;
+    }
+
+    p {
+      max-width: 445px;
+      margin: 0 auto;
+      text-align: center;
+      line-height: 1.7;
+      font-family: "Lora", serif;
+      color: #434140;
+    }
+
+    .home__container__ourTeam__teams {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      padding: 0 20px;
+    }
+  }
+
+  /** @section => team expansion */
+  .home__container__teamExpansion {
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 180px;
+    border-bottom: 3px solid #BFC1C6;
+
+    h1 {
+      text-align: center;
+      margin-bottom: 12px;
+      color: #434140;
+      font-family: "Raleway", sans-serif;
+      font-size: 38px;
+      font-weight: 600;
+    }
+
+    p {
+      max-width: 545px;
+      margin: 0 auto;
+      text-align: center;
+      line-height: 1.7;
+      font-family: "Lora", serif;
+      color: #434140;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    a {
+      text-decoration: none;
+      color: #434140;
+      line-height: 1.8;
+      font-weight: 600;
+      border-left: 3px solid #17203e;
+      border-right: 3px solid #17203e;
+      padding: 10px 20px;
+      font-family: "Raleway", sans-serif;
+      transition: all 0.3s ease;
+      font-size: 18px;
+
+      &:hover {
+        color: #185f7d;
+        padding-left: 25px;
+        padding-right: 25px;
+        border-color: #185f7d;
       }
     }
   }
