--- a/src/Pages/Home/style.scss
+++ b/src/Pages/Home/style.scss
@@ -150,11 +150,9 @@
 
   /** @section => our work */
   .home__container__ourWork {
-    margin-top: 150px;
     padding: 0 80px;
 
     @media (max-width: 1200px) {
-      margin-top: 100px;
       padding: 0 30px;
     }
 
@@ -164,6 +162,13 @@
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+    margin-top: 150px;
+
+
+      @media (max-width: 1200px) {
+        margin-top: 100px;
+        padding: 0 30px;
+      }
 
       div {
         flex: 1 1 0;
