--- a/src/Components/Navbar/style.scss
+++ b/src/Components/Navbar/style.scss
@@ -1,5 +1,5 @@
 .navbar__container{
-    padding: 42px 0;
+    padding: 32px 0;
     padding-bottom: 24px;
     border-bottom: 3px solid #BFC1C6;
     
@@ -8,5 +8,10 @@
         color: #16203F;
         font-size: 22px;
         font-weight: 600;
+
+        img{
+            width: 180px;
+            object-fit: contain;
+        }
     }
 }
