Job Application Added

--- a/src/Pages/Jobs/style.scss
+++ b/src/Pages/Jobs/style.scss
@@ -87,7 +87,7 @@
     .jobs__container__jobs__list {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: space-around;
       flex-wrap: wrap;
       align-items: center;
 
