--- a/src/Pages/Home/style.scss
+++ b/src/Pages/Home/style.scss
@@ -140,6 +140,7 @@
         line-height: 1.7;
         font-weight: 400;
         color: #434140;
+        text-align: justify;
 
         @media (max-width: 1200px) {
           margin-bottom: 40px;
